[package]
name = "lichess-game-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
embedded-graphics = "0.8.1"
futures-util = "*"
pixels = "0.13.0"
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
shakmaty = "0.26.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
winit = "0.28"
